--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <h1>"How To Play"</h1>
-<p>"dsgsgsdgsdgsgsd"</p>
+<p>"Instructions"</p>
 <div class="container">
 <div id='box1' class='row1 column1' value='1'>1</div>
 <div id='box2' class='row1 column2' value='2'>2</div>
