--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>"How To Play"</h1>
+<h1>"How To Play The Game"</h1>
 <p>"Instructions"</p>
 <div class="container">
 <div id='box1' class='row1 column1' value='1'>1</div>
