--- a/index.html
+++ b/index.html
@@ -10,39 +10,87 @@
   <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
-<h1>"How To Play The Game"</h1>
-<p>"Instructions"</p>
-<div class="container">
-<div id='box1' class='row1 column1' value='1'>1</div>
-<div id='box2' class='row1 column2' value='2'>2</div>
-<div id='box3' class='row1 column3' value='3'>3</div>
-<div id='box4' class='row1 column4' value='4'>4</div>
-<div id='box5' class='row1 column5' value='5'>5</div>
-<div id='box6' class='row2 column1' value='6'>6</div>
-<div id='box7' class='row3 column1' value='7'>7</div>
-<div id='box8' class='row4 column1' value='8'>8</div>
-<div id='box9' class='row5 column1' value='9'>9</div>
-<div id='box10' class='row2 column2' value='10'></div>
-<div id='box11' class='row3 column2' value='11'></div>
-<div id='box12' class='row4 column2' value='12'></div>
-<div id='box13' class='row5 column2' value='13'></div>
-<div id='box14' class='row2 column3' value='14'></div>
-<div id='box15' class='row3 column3' value='15'></div>
-<div id='box16' class='row4 column3' value='16'></div>
-<div id='box17' class='row5 column3' value='17'></div>
-<div id='box18' class='row2 column4' value='18'></div>
-<div id='box19' class='row3 column4' value='19'></div>
-<div id='box20' class='row4 column4' value='20'></div>
-<div id='box21' class='row5 column4' value='21'></div>
-<div id='box22' class='row2 column5' value='22'></div>
-<div id='box23' class='row3 column5' value='23'></div>
-<div id='box24' class='row4 column5' value='24'></div>
-<div id='box25' class='row5 column5' value='25'></div>
-</div>
+  <div class="container">
+    <div id='box1' class='row1 column1 game-boxes' value='1'>1
+      <input class="textbox1" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box2' class='row1 column2 game-boxes' value='2'>2
+      <input class="textbox2" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box3' class='row1 column3 game-boxes' value='3'>3
+      <input class="textbox3" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box4' class='row1 column4 game-boxes' value='4'>4
+      <input class="textbox4" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box5' class='row1 column5 game-boxes' value='5'>5
+      <input class="textbox5" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box6' class='row2 column1 game-boxes' value='6'>6
+      <input class="textbox6" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box7' class='row3 column1 game-boxes' value='7'>7
+      <input class="textbox7" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box8' class='row4 column1 game-boxes' value='8'>8
+      <input class="textbox8" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box9' class='row5 column1 game-boxes' value='9'>9
+      <input class="textbox9" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box10' class='row2 column2 game-boxes' value='10'>
+      <input class="textbox10" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box11' class='row3 column2 game-boxes' value='11'>
+      <input class="textbox11" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box12' class='row4 column2 game-boxes' value='12'>
+      <input class="textbox12" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box13' class='row5 column2 game-boxes' value='13'>
+      <input class="textbox13" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box14' class='row2 column3 game-boxes' value='14'>
+      <input class="textbox14" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box15' class='row3 column3 game-boxes' value='15'>
+      <input class="textbox15" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box16' class='row4 column3 game-boxes' value='16'>
+      <input class="textbox16" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box17' class='row5 column3 game-boxes' value='17'>
+      <input class="textbox17" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box18' class='row2 column4 game-boxes' value='18'>
+      <input class="textbox18" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box19' class='row3 column4 game-boxes' value='19'>
+      <input class="textbox19" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box20' class='row4 column4 game-boxes' value='20'>
+      <input class="textbox20" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box21' class='row5 column4 game-boxes' value='21'>s
+      <input class="textbox21" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box22' class='row2 column5 game-boxes' value='22'>
+      <input class="textbox22" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box23' class='row3 column5 game-boxes' value='23'>
+      <input class="textbox23" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box24' class='row4 column5 game-boxes' value='24'>
+      <input class="textbox24" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div id='box25' class='row5 column5 game-boxes' value='25'>
+      <input class="textbox25" type="text" maxlength="1" style="text-transform: uppercase">
+    </div>
+    <div class='sidebar'></div>
+    <h1>"How To Play The Game"</h1>
+    <p>"Instructions"</p>
+    <button class='hints'>Hints</button>
+  </div>
 </body>
 </html>
 
-<!-- hidden value  -->
-
-<!-- <div id=box25 value="hidden">Y</div>
- -->
