--- a/index.html
+++ b/index.html
@@ -12,42 +12,35 @@
 <body>
   <div class="container">
     <div id='box1' class=' hint-boxes' value='1'>
-      <input class="textbox1" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box2' class= hint-boxes' value='2'>
-      <input class="textbox2" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
-    <div id='box3' class='row1 column3 game-boxes hint-boxes' value='3'>1
+    <div id='box3' class='row1 column3 game-boxes hint-boxes text1' value='3'>
       <input class="textbox3" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box4' class=' hint-boxes' value='4'>
-      <input class="textbox4" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
-    <div id='box5' class='row1 column5 game-boxes hint-boxes' value='5'>2
+    <div id='box5' class='row1 column5 game-boxes hint-boxes' value='5'>
       <input class="textbox5" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box6' class=' hint-boxes' value='6'>
-      <input class="textbox6" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box7' class=' hint-boxes' value='7'>
-      <input class="textbox7" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
-    <div id='box8' class='row4 column1 game-boxes hint-boxes' value='8'>4
+    <div id='box8' class='row4 column1 game-boxes hint-boxes' value='8'>
       <input class="textbox8" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box9' class='' value='9'>
     </div>
-    <div id='box10' class='row2 column2 game-boxes hint-boxes' value='10'>3
+    <div id='box10' class='row2 column2 game-boxes hint-boxes' value='10'>
       <input class="textbox10" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box11' class=' hint-boxes' value='11'>
-      <input class="textbox11" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box12' class='row4 column2 game-boxes hint-boxes' value='12'>
       <input class="textbox12" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box13' class=' hint-boxes' value='13'>
-      <input class="textbox13" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box14' class='row2 column3 game-boxes hint-boxes' value='14'>
       <input class="textbox14" type="text" maxlength="1" style="text-transform: uppercase">
@@ -65,13 +58,11 @@
       <input class="textbox18" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box19' class=' hint-boxes' value='19'>
-      <input class="textbox19" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box20' class='row4 column4 game-boxes hint-boxes' value='20'>
       <input class="textbox20" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box21' class=' hint-boxes' value='21'>
-      <input class="textbox21" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box22' class='row2 column5 game-boxes hint-boxes' value='22'>
       <input class="textbox22" type="text" maxlength="1" style="text-transform: uppercase">
@@ -80,24 +71,26 @@
       <input class="textbox23" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box24' class='hint-boxes' value='24'>
-      <input class="textbox24" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
     <div id='box25' class='hint-boxes' value='25'>
-      <input class="textbox25" type="text" maxlength="1" style="text-transform: uppercase">
     </div>
-    <div class='sidebar'></div>
+    <div class='sidebar'>
     <h1 class='title'>"The Art Of The Crossword"</h1>
-      <h1 div class='down'>Down</div></h1>
-      <h1 div class='questionone questionbox'>1. Question about the Rubin Museum</div></h1>
-      <h1 div class='questiontwo questionbox'>2. Question about the Agora Museum<div></h1>
-      <h1 div class='acrosstitle'>Across</div></h1>
+      <h1 div class='across'>Across</div></h1>
+      <h1 div class='questionone questionbox down'>1. Question about the Rubin Museum</div></h1>
+      <h1 div class='questiontwo questionbox down'>2. Question about the Agora Museum<div></h1>
+      <h1 div class='downtitle'>Down</div></h1>
       <h1 div class='questionthree questionbox across'>3. Question about The New Museum</div></h1>
       <h1 div class='questionfour questionbox across'>4. Question about the Gugg</div></h1>
-      <h1 div class='questionfive questionbox across'>5. Question about the Met</div></h1>
-      <h1 div class='questionsix questionbox across'>6. Question about the Frick<div></h1>
-      <h1 div class='questionseven questionbox across'>7. Question about the Arts<div></h1>
+     <ul>
+     <h2 class="boxnumber1">1</h2>
+     <h2 class='boxnumber2'>2</h2>
+     <h2 class='boxnumber3'>3</h2>
+     <h2 class="boxnumber4">4</h2>
+     </ul>
      <button class='hints'>Hints</button>
      <button class='submit'>Submit</button>
+    <button class='autofill'>Answers</button>
   </div>
 </body>
 </html>
