--- a/index.html
+++ b/index.html
@@ -1,73 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Rachel's Crossword Puzzle</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="https://code.jquery.com/jquery-3.1.1.min.js" type="text/javascript"></script>
-  <script src="js/main.js" type="text/javascript"></script>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge
+  <title>Rachel's Crossword Puzzle</title>
+  <link rel='stylesheet' href='css/normalize.css'>
+  <link rel='stylesheet' href='css/style.css'>
+  <script src='https://code.jquery.com/jquery-3.1.1.min.js' type='text/javascript'></script>
+  <script src='js/main.js' type='text/javascript'></script>
 </head>
 <body>
-  <div class="flexbox">
-  <div class="container">
-    <div id='box1' class=' hint-boxes'></div>
-    <div id='box2' class= 'hint-boxes'></div>
-    <div id='box3' class='row1 column3 game-boxes hint-boxes text1'>
-      <input class="textbox3" type="text" maxlength="1">
-    </div>
-    <div id='box4' class=' hint-boxes'></div>
-    <div id='box5' class='row1 column5 game-boxes hint-boxes'>
-      <input class="textbox5" type="text" maxlength="1">
-    </div>
-    <div id='box6' class=' hint-boxes' value='6'></div>
-    <div id='box7' class=' hint-boxes' value='7'></div>
-    <div id='box8' class='row4 column1 game-boxes hint-boxes'>
-      <input class="textbox8" type="text" maxlength="1">
-    </div>
-    <div id='box9' class=' hint-boxes'></div>
-    <div id='box10' class='row2 column2 game-boxes hint-boxes'>
-      <input class="textbox10" type="text" maxlength="1">
-    </div>
-    <div id='box11' class=' hint-boxes'></div>
-    <div id='box12' class='row4 column2 game-boxes hint-boxes'>
-      <input class="textbox12" type="text" maxlength="1">
-    </div>
-    <div id='box13' class=' hint-boxes'></div>
-    <div id='box14' class='row2 column3 game-boxes hint-boxes'>
-      <input class="textbox14" type="text" maxlength="1">
-    </div>
-    <div id='box15' class='row3 column3 game-boxes hint-boxes'>
-      <input class="textbox15" type="text" maxlength="1">
-    </div>
-    <div id='box16' class='row4 column3 game-boxes hint-boxes'>
-      <input class="textbox16" type="text" maxlength="1">
-    </div>
-    <div id='box17' class='row5 column3 game-boxes hint-boxes'>
-      <input class="textbox17" type="text" maxlength="1">
-    </div>
-    <div id='box18' class='row2 column4 game-boxes hint-boxes'>
-      <input class="textbox18" type="text" maxlength="1">
-    </div>
-    <div id='box19' class=' hint-boxes'></div>
-    <div id='box20' class='row4 column4 game-boxes hint-boxes'>
-      <input class="textbox20" type="text" maxlength="1">
-    </div>
-    <div id='box21' class=' hint-boxes'></div>
-    <div id='box22' class='row2 column5 game-boxes hint-boxes'>
-      <input class="textbox22" type="text" maxlength="1">
-    </div>
-    <div id='box23' class='row3 column5 game-boxes hint-boxes'>
-      <input class="textbox23" type="text" maxlength="1">
-    </div>
-    <div id='box24' class='hint-boxes'>
-    </div>
-    <div id='box25' class='hint-boxes'>
-    </div>
+  <div class='container'>
+      <div id='box1' class='hint-boxes'></div>
+      <div id='box2' class='hint-boxes'></div>
+      <div id='box3' class='row1 column3 game-boxes hint-boxes'>
+        <input class='textbox3' type='text' maxlength='1'>
+      </div>
+      <div id='box4' class='hint-boxes'></div>
+      <div id='box5' class='row1 column5 game-boxes hint-boxes'>
+        <input class='textbox5' type='text' maxlength='1'>
+      </div>
+      <div id='box6' class='hint-boxes' value='6'></div>
+      <div id='box7' class='hint-boxes' value='7'></div>
+      <div id='box8' class='row4 column1 game-boxes hint-boxes'>
+        <input class='textbox8' type='text' maxlength='1'>
+      </div>
+      <div id='box9' class='hint-boxes'></div>
+      <div id='box10' class='row2 column2 game-boxes hint-boxes'>
+        <input class='textbox10' type='text' maxlength='1'>
+      </div>
+      <div id='box11' class='hint-boxes'></div>
+      <div id='box12' class='row4 column2 game-boxes hint-boxes'>
+        <input class='textbox12' type='text' maxlength='1'>
+      </div>
+      <div id='box13' class='hint-boxes'></div>
+      <div id='box14' class='row2 column3 game-boxes hint-boxes'>
+        <input class='textbox14' type='text' maxlength='1'>
+      </div>
+      <div id='box15' class='row3 column3 game-boxes hint-boxes'>
+        <input class='textbox15' type='text' maxlength='1'>
+      </div>
+      <div id='box16' class='row4 column3 game-boxes hint-boxes'>
+        <input class='textbox16' type='text' maxlength='1'>
+      </div>
+      <div id='box17' class='row5 column3 game-boxes hint-boxes'>
+        <input class='textbox17' type='text' maxlength='1'>
+      </div>
+      <div id='box18' class='row2 column4 game-boxes hint-boxes'>
+        <input class='textbox18' type='text' maxlength='1'>
+      </div>
+      <div id='box19' class='hint-boxes'></div>
+      <div id='box20' class='row4 column4 game-boxes hint-boxes'>
+        <input class='textbox20' type='text' maxlength='1'>
+      </div>
+      <div id='box21' class=' hint-boxes'></div>
+      <div id='box22' class='row2 column5 game-boxes hint-boxes'>
+        <input class='textbox22' type='text' maxlength='1'>
+      </div>
+      <div id='box23' class='row3 column5 game-boxes hint-boxes'>
+        <input class='textbox23' type='text' maxlength='1'>
+      </div>
+      <div id='box24' class='hint-boxes'>
+      </div>
+      <div id='box25' class='hint-boxes'>
+      </div>
   </div>
   <div class='sidebox'></div>
-    <div class='sidebar'>
+  <div class='sidebar'>
       <h1 class='title'>Mini Crossword Puzzle</h1>
       <h1><div class='across'>ACROSS</div></h1>
       <h1><div class='questionone questionbox down'>1. Question about the Rubin Museum</div></h1>
@@ -76,10 +75,10 @@
       <h1><div class='questionthree questionbox across'>3. Question about The New Museum</div></h1>
       <h1><div class='questionfour questionbox across'>4. Question about the Gugg</div></h1>
       <ul>
-        <h2 class="boxnumber1">1</h2>
-        <h2 class='boxnumber2'>2</h2>
-        <h2 class='boxnumber3'>3</h2>
-        <h2 class="boxnumber4">4</h2>
+        <li><h2 class='boxnumber1'>1</h2></li>
+        <li><h2 class='boxnumber2'>2</h2></li>
+        <li><h2 class='boxnumber3'>3</h2></li>
+        <li><h2 class='boxnumber4'>4</h2></li>
      </ul>
      <button class='hints'>HINTS</button>
      <button class='submit'>SUBMIT</button>
