--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Rachel's Crossword Puzzle'</title>
+  <title>Crossword Puzzle'</title>
   <link rel='stylesheet' href='css/normalize.css'>
   <link rel='stylesheet' href='css/style.css'>
   <script src='https://code.jquery.com/jquery-3.1.1.min.js' type='text/javascript'></script>
@@ -68,13 +68,13 @@
   </div>
   <div class='sidebox'></div>
   <div class='sidebar'>
-    <h1 class='title'>Mini Crossword Puzzle</h1>
+    <h1 class='title'>NYC's Art Scene Crossword</h1>
     <h1><div class='across'>ACROSS</div></h1>
-    <h1><div class='questionone questionbox down'>1. Question about the Rubin Museum</div></h1>
-    <h1><div class='questiontwo questionbox down'>2. Question about the Agora Museum</div></h1>
+    <h1><div class='questionone questionbox down'>1.Himalayan art hub</div></h1>
+    <h1><div class='questiontwo questionbox down'>2.Chelsea's global showroom</div></h1>
     <h1><div class='downtitle'>DOWN</div></h1>
-    <h1><div class='questionthree questionbox across'>3. Question about The New Museum</div></h1>
-    <h1><div class='questionfour questionbox across'>4. Question about the Gugg</div></h1>
+    <h1><div class='questionthree questionbox across'>3.Designed by Frank Lloyd Wright</div></h1>
+    <h1><div class='questionfour questionbox across'>4.Innovative home for American art</div></h1>
     <ul>
       <li><h2 class='boxnumber1'>1</h2></li>
       <li><h2 class='boxnumber2'>2</h2></li>
@@ -83,7 +83,7 @@
    </ul>
    <button class='hints'>HINTS</button>
    <button class='submit'>SUBMIT</button>
-   <button class='autofill'>ANSWERS</button>
+   <button class='autofill'>Autofill</button>
   </div>
 </div>
 </div>
