--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </ul>
    <button class='hints'>HINTS</button>
    <button class='submit'>SUBMIT</button>
-   <button class='autofill'>Autofill</button>
+   <button class='autofill'>AUTOFILL</button>
   </div>
 </div>
 </div>
