--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-  <title>Crossword Puzzle</title>
+  <title>Crossword</title>
   <link rel='stylesheet' href='css/normalize.css'>
   <link rel='stylesheet' href='css/style.css'>
   <script src='https://code.jquery.com/jquery-3.1.1.min.js' type='text/javascript'></script>
